# dictionaries

./: .travis.yml  Common.hs  LICENSE  Main.hs  README.md  Report.hs  Space.hs  Time.hs  bench.cabal  stack.yaml
