name:                bench
version:             0
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends: base
  default-language: Haskell2010

test-suite space
  default-language:    Haskell2010
  type: exitcode-stdio-1.0
  ghc-options: -O2
  main-is: Space.hs
  other-modules: Common
  build-depends: base
               , weigh
               , deepseq
               , containers
               , unordered-containers
               , bytestring-trie
               , bytestring
               , random
               , hashtables

benchmark time
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  ghc-options:       -Wall -O2 -rtsopts
  main-is:           Time.hs
  other-modules: Common
  build-depends:     base
                   , bytestring
                   , ghc-prim
                   , criterion
                   , deepseq
                   , containers
                   , unordered-containers
                   , bytestring-trie
                   , random, directory
                   , hashtables

executable report
  default-language: Haskell2010
  ghc-options:       -Wall -O2 -rtsopts
  main-is:           Report.hs
  build-depends:     base
                   , bytestring, directory
                   , vector
                   , ghc-prim
                   , criterion
                   , deepseq
                   , containers
                   , csv
